Archive/1152c31a5521076c16c190e396d13041-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:6:10: error: extra qualification ‘MyClass::’ on member ‘myFunc’ [-fpermissive]
     void MyClass::myFunc();};
          ^
